# cpp_prof_hw13

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: helpers.h
src/: helpers.cpp  main.cpp  mlp_classifier.cpp
tests/: test_mlp.cpp
